--- a/src/components/Latex.astro
+++ b/src/components/Latex.astro
@@ -14,10 +14,10 @@ const { block, formula } = Astro.props;
   Using <span> as I had issues with <div>
   not rendering inline inside a <p>.
 */
-const blockStyles = "p-2 border-2"
-const blockLight = "bg-sky-200 p border-slate-600 bg-opacity-50 border-opacity-50";
+const blockStyles = "border-2 my-8 p-2"
+const blockLight = "bg-sky-200 border-slate-600 bg-opacity-50 border-opacity-50";
 const blockDark = "dark:bg-blue-400 dark:border-sky-400 dark:bg-opacity-30 dark:border-opacity-30";
-const className = block ? `block my-8 ${[blockStyles, blockLight, blockDark].join(" ")}` : "";
+const className = block ? `block ${[blockStyles, blockLight, blockDark].join(" ")}` : "";
 
 const latex = katex.renderToString(formula, {
   trust: (context) => context.command === "\\href"
